feat: added old travelbox service for analysis

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-boilerplate",
-  "version": "1.0.0",
-  "description": "Typescript NodeJS boilerplate for quick TS prototypes",
+  "name": "unify-elite",
+  "version": "0.1.0",
+  "description": "Investigation for the new Travelbox service",
   "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon",
@@ -17,9 +17,13 @@
   "author": "Chris Rabe",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^17.0.1",
+    "@types/superagent": "^4.1.13",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "deep-object-diff": "^1.1.0",
     "eslint": "^8.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
@@ -29,5 +33,11 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.27.0",
+    "dotenv": "^10.0.0",
+    "superagent": "^6.1.0",
+    "uuid": "^8.3.2"
   }
 }
